--- a/Bric à Brac.tex
+++ b/Bric à Brac.tex
@@ -154,7 +154,7 @@ Soit \(R\) une relation binaire ser l'ensemble \(E\):
 \subsubsection{Le cas de $\mathbb{R}$}
 \begin{theo} Borne sup\'erieure \\
 	L'ensemble ordon\'e $(\mathbb{R}, \leq)$ v\'erifie la propri\'et\'e de la borne sup\'erieure: toute partie non vide de $\mathbb{R}$
-	admet une borne sup\'erieure
+	major\'ee admet une borne sup\'erieure
 \end{theo}
 
 \begin{coro}
