--- a/Dénombrement.tex
+++ b/Dénombrement.tex
@@ -50,7 +50,7 @@
 			\end{enumerate}
 		\item Ensemble des parties d'un ensemble fini
 			\begin{enumerate}
-			\item $P(E)$ est fini et $|P(E)| = 2^{|E|}$
+			\item $\mathcal{P}(E)$ est fini et $|\mathcal{P}(E)| = 2^{|E|}$
 			\item $\gamma_k^n = \binom{n}{k}$ c'est le nombre de parties \`a $k$ \`el\`ements d'un ensemble fini \`a n \`el\`ements
 			\end{enumerate}
 		\item Produit cart\'esien \\
