--- a/Entiers naturels.tex
+++ b/Entiers naturels.tex
@@ -23,7 +23,7 @@
 
 %Axiomatique de péano {{{1
 \section{Axiomatique de p\'eano}
-Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre totale $\leq$ telle que:
+Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni d'une relation d'ordre totale $\leq$ telle que:
 \begin{enumerate}
 	\item Toute partie non vide de $\mathbb{N}$ admet un minimum
 	\item Toute partie non vide major\'ee de $\mathbb{N}$ admet un maximum
