--- a/Nombres complexes.tex
+++ b/Nombres complexes.tex
@@ -163,6 +163,9 @@ $\Delta = b^2 -4ac$. Soit $\delta$ une racine car\'ee de $\Delta$. Alors $P$ adm
 \begin{enumerate}
 	\item Penser \`a factoriser par le demi-angle
 	\item Utiliser \'ecriture exponentielle
+	\item Pour une somme, essayer de faire appara\^itre une somme g\'eom\'etrique
+	\item Pour r\'esoudre des \'equations avec des complexes, penser \`a l'\'equation du cercle: $(x-h)^2 + (y-k)^2=r^2$ avec $h,k$ les
+		coordonn\'ees du centre du cercle
 \end{enumerate}
 
 \end{document}
