--- a/Nombres réels.tex
+++ b/Nombres réels.tex
@@ -45,7 +45,7 @@
 	\end{enumerate}
 \end{defi}
 \begin{prop}
-	Pour $a \in \mathbb{R}, \epsilon > 0$,
+	Pour $a \in \mathbb{R}, \epsilon > 0$, soit $x \in \mathbb{R}$:
 	\[|x-a| \leq \epsilon \Leftrightarrow x \in [a - \epsilon, a + \epsilon]\]
 	\[|x-a| < \epsilon \Leftrightarrow x \in ]a - \epsilon, a + \epsilon[\]
 \end{prop}
@@ -72,8 +72,14 @@
 		\item $\forall\ \alpha,\beta \in \mathbb{R},\ \alpha < \beta \Rightarrow A \cap ]\alpha, \beta[ \neq \emptyset$
 	\end{enumerate}
 	\begin{theo} $\mathbb{Q}$ est dense dans $\mathbb{R}$ \end{theo}
-	\begin{coro} $\mathbb{R}/\mathbb{Q}$ est dense dans $\mathbb{R}$ \end{coro}
+	\begin{coro} $\mathbb{R}\backslash \mathbb{Q}$ est dense dans $\mathbb{R}$ \end{coro}
 \end{defi}
+
+\begin{prop} In\'egalit\'e arithm\'etico-g\'eom\'erique\\
+	Soit $n \in \mathbb{N}^*,\ a_1, \hdots, a_n \in \mathbb{R}_+$ alors:
+	\[\sqrt[n]{a_1 \hdots a_n} \leq \frac{a_1 + \hdots + a_n}{n}\]
+
+\end{prop}
 
 
 \end{document}
