--- a/Bric à Brac.tex
+++ b/Bric à Brac.tex
@@ -141,6 +141,9 @@ Soit \(R\) une relation binaire ser l'ensemble \(E\):
 				\item [-] A est major\'e s'il existe \(x \in E, \forall a \in A, a \preceq x\)
 				\item [-] A est minor\'e s'il existe \(x \in E, \forall a \in A, x \preceq a\)
 			\end{itemize}
+			\begin{rqs} Caract\'erisation majorant/minorant\\
+				$f$ est major\'ee (resp. min) par $\beta \Leftrightarrow \forall \epsilon > 0, \exists x \in X,\ \beta - \epsilon < f(x)$
+			\end{rqs}
 		\item Bornes sup\'erieures et inf\'erieures:
 			\begin{itemize}
 				\item [-] Soit \(A \subset E\), A major\'e. \\
