--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -31,7 +31,14 @@
 	\[f(x) = \sum_{i=0}^{n} a_i(x-x_0)^i  + o((x-x_0)^n)\]
 \end{prop}
 
-\begin{rqs}
+\begin{prop} R\'egularit\'e d'une fonction $f$
+	\begin{itemize}
+		\item [-] $f$ admet un $DL_0(x_0) \Leftrightarrow f$ est continue en $x_0$
+		\item [-] $f$ admet un $DL_1(x_0) \Leftrightarrow f$ est d\'erivable en $x_0$
+	\end{itemize}
+\end{prop}
+
+\begin{prop}
 	$\ $
 	\begin{enumerate}
 		\item Multiplication \'el\'ementaire: \\
@@ -41,7 +48,7 @@
 		$f: I \rightarrow \mathbb{R}$, on suppose f admet un $DL_n(0)$, soit $\lambda \in \mathbb{R}, \alpha \in \mathbb{N}^*$ \\
 		$f(\lambda x^{\alpha}) = a_0 + a_1 \lambda x^{\alpha} + \hdots + \lambda ^n a_n x^{\alpha n} + o(x^{\alpha n})$
 	\end{enumerate}
-\end{rqs}
+\end{prop}
 
 \begin{theo} Int\'egration des DL \\
 	$f: I \rightarrow \mathbb{R}$, f d\'erivable. Supposons que $f'$ admet un $DL_n(0)$: au V(0)\\
