--- a/Limites.tex
+++ b/Limites.tex
@@ -75,7 +75,8 @@
 %Notion de limite {{{1
 \section{Notion de limite}
 \begin{defi}
-	Soit $D \subset \mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a $D, l \in \overline{\mathbb{R}}, f: D \rightarrow \mathbb{R}$.
+	Soit $D \subset \mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a $D, l \in \overline{\mathbb{R}}, f: D \rightarrow \mathbb{R}$.\\
+	On dit que $f(x)$ tend vers $l$ quand $x$ tend vers $a$ si:
 	\begin{enumerate}
 		\item $\forall\ V \in V_{\overline{\mathbb{R}}%
 		}(l), \exists U \in V_{\overline{\mathbb{R}}%
@@ -180,7 +181,7 @@ Th\'eor\`emes g\'en\'eraux classiques valables pour les limites.
 \begin{theo} $ $ \\
 	Soit I un intervalle non trivial de $\mathbb{R},\ f:I \rightarrow \mathbb{R}$, croissante (par exemple). \\
 	Soit $x_0 \in Int(I)$ alors $f$ admet en $x_0$ des limites telles que:
-	\[\lim_{x_0^- f} \leq f(x_0) \leq \lim_{x_0^+}\]
+	\[\lim_{x_0^-} f \leq f(x_0) \leq \lim_{x_0^+} f\]
 \end{theo}
 
 \begin{theo} $ $ \\
