--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -98,7 +98,7 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 	Boel-Lebesque \\ Soit $A \subset \mathbb{R} (A \neq \emptyset)$, LASSE:
 	\begin{enumerate}
 		\item $A$ est ferm\'ee born\'ee (compacte)
-		\item Pour toute suite $(a_n)$ d'\'el\'ements de $a$, il existe une sous-suite de $(a_n)$ qui converge vers un \'el\'ement de $A$
+		\item Pour toute suite $(a_n)$ d'\'el\'ements de $A$, il existe une sous-suite de $(a_n)$ qui converge vers un \'el\'ement de $A$
 	\end{enumerate}
 \end{theo}
 
