--- a/Équivalents.tex
+++ b/Équivalents.tex
@@ -39,7 +39,7 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 
 \begin{rqs} $ $
 	\begin{enumerate}
-		\item Une fonction n'est \'equivalente, domin\'ee ou n\'egligeable par 0 que si elle est nulle sur le voisinage
+		\item Une fonction n'est \'equivalente, domin\'ee ou n\'egligeable par 0 que si elle est nulle au voisinage du pt consid\'er\'e
 		\item $f(x) = o(1)$ signifie que $f(x) \rightarrow 0$
 		\item Soit $l \in \mathbb{R}^{*}, f(x) \sim l \Leftrightarrow f(x) \rightarrow l$
 	\end{enumerate}
@@ -70,9 +70,9 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 	\item $f(x) \sim g(x) \Leftrightarrow f(x) - g(x) = o(g(x))$
 	\item $f(x) = o(g(x)) \Rightarrow f(x) + g(x) \sim g(x)$
 	\item L'\'equivalence est r\'eflexive, sym\'etrique et transitive
-	\item $f_1(x) \sim g_1(x)$\\
-		$f_2(x) \sim g_2(x)$\\
-		Alors, $f_1(x)f_2(x) \sim g_1(x)g_2(x)$ \\et si $f_2(x), g_2(x) \neq 0$ au voisinage de a, $\frac{f_1(x)}{f_2(x)} \sim
+	\item Si $f_1(x) \sim g_1(x)$ et
+		$f_2(x) \sim g_2(x)$ alors:\\
+		$f_1(x)f_2(x) \sim g_1(x)g_2(x)$ \\Si $f_2(x), g_2(x) \neq 0$ au voisinage de a, $\frac{f_1(x)}{f_2(x)} \sim
 		\frac{g_1(x)}{g_2(x)}$
 \end{enumerate}
 
