--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -92,9 +92,9 @@
 		$f(x) =  a_0 + a_1(x-x_0) + \hdots + a_n(x-x_0)^n + o((x-x_0)^n)$ \\
 		On suppose qu'au moins un des $a_i$ n'est pas nul. Soit $p$ le minimum de l'ensemble des $a_i$ non nuls. \\
 		Alors $f(x) \underset{x_0}{\sim} a_p(x-x_0)^p$
-	\item Recherche d'asymptotes \\
-		Pour trouver une aymptote on essaie de faire un developpement asymptotique de $x \mapsto \frac{f(x)}{x}$ au $V(+\infty)$, ce qui revient
-		\`a faire un $DL(0)$ de $\varphi \mapsto h f(\frac{1}{h})$. \\
+	\item Recherche d'asymptotes en $\infty$\\
+		Pour trouver une aymptote de $f$ on essaie de faire un developpement asymptotique de $x \mapsto \frac{f(x)}{x}$ au $V(+\infty)$,
+		ce qui revient \`a faire un $DL(0)$ de $\varphi \mapsto h f(\frac{1}{h})$. \\
 		Apr\`es on effectue une composition \'el\'ementaire par l'inverse de $\varphi$ puis on multiplie par $x$.
 \end{enumerate}
 
