--- a/Équation différentielles.tex
+++ b/Équation différentielles.tex
@@ -28,14 +28,14 @@ Une \'equation diff\'erenielle est une \'ecriure du type:
 F une application de $I \times \Omega$ dans $\mathbb{R}$ avec I intervalle de $\mathbb{R}$, $\Omega$ partie de $\mathbb{R}^{n+1}$\\
 Une solution est par d\'efinition une application continue $f:J\rightarrow \mathbb{R}$, n fois d\'erivable telle que:
 \begin{enumerate}
-	\item $\forall t \in J, (f(t), f'(t), \hdots, f^{(n)}(t)) \in \Omega$
+	\item $\forall t \in J, (f(t), f'(t), \hdots, f^{(n)}(t)) \in \Omega^{n+1}$
 	\item $\forall t \in J, F(t, f(t), \hdots, f^{(n)}(t)) = 0$
 \end{enumerate}
 
 \begin{rqs} $ $
 	\begin{itemize}
 		\item [-] Il n'y a pas toujours de solution
-		\item [-] S'il y-en a, elle ne sont pas forcement d\'efinies sur tout l'intervalle
+		\item [-] S'il y-en a, elle ne sont pas forcement d\'efinies sur tout l'intervalle $I$
 		\item [-] S'il y-en a, en g\'eneral on ne peut pas les exprimer au moyen des fonctions usuelles.
 	\end{itemize}
 \end{rqs}
